# cc-custom-mcp

./: .env.development  .env.production  DEVELOPMENT.md  GEMINI.md  MCP_DEVELOPMENT_GUIDE.md  README.md  mcp-config-prod.json  package-lock.json  package.json
.qoder/rules/: s.md
scripts/: README.md  build-all.bat  build-all.ps1  build-all.sh  dev-mcp-server.sh  dev-mcp.sh  generate-mcp-config.sh  prod-mcp.sh  restore-app-name.cjs  setup-dev-prod-separation.sh  update-app-name.cjs
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.json.backup
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  mcp_server.rs  system_sound.rs
src/components/: CustomSelect.vue  FeedbackSession.vue  NotificationContainer.vue  NotificationToast.vue  Sidebar.vue  TabContainer.vue  ToggleSwitch.vue  UnifiedTabContainer.vue
src/i18n/: index.ts
src/locales/: en-US.ts  zh-CN.ts
src/router/: index.ts
src/stores/: feedback.ts
src/styles/: global.css
src/views/: Dashboard.vue  Feedback.vue  Settings.vue
