[package]
name = "cc-custom-mcp"
version = "0.1.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "cc-custom-mcp"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cc_custom_mcp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "cc-custom-mcp"
path = "src/main.rs"



[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.0", features = ["full"] }

# MCP 官方 Rust SDK
rmcp = { version = "0.2.0", features = ["server"] }

# 额外依赖
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
hostname = "0.3"
lazy_static = "1.4"
async-trait = "0.1"
sysinfo = "0.30"  # 用于进程检测

# 系统提示音依赖
[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
cocoa = "0.25"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }

[target.'cfg(target_os = "linux")'.dependencies]
# Linux 使用 aplay 命令播放系统音效

